# Data-Wizards-WiDS-2026

./: README.md  decisiones.md  index.html  pyproject.toml  reporte.md
notebooks/: eda.ipynb  feature_selection.ipynb  model_cox.ipynb  model_rsf.ipynb  validation.ipynb
