[project]
name = "wids-datathon-2026"
version = "0.1.0"
description = "Solución del equipo para el Datathon WiDS 2026"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "lifelines>=0.27",
    "scikit-survival>=0.22",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupytext>=1.19.3",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
]
